--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@babel/runtime": "^7.26.0",
     "@expo/vector-icons": "^14.0.4",
+    "@react-native-clipboard/clipboard": "^1.15.0",
     "@react-navigation/bottom-tabs": "^7.1.3",
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/native-stack": "^7.1.14",
@@ -27,19 +28,22 @@
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.11",
+    "expo-router": "^4.0.11",
     "expo-splash-screen": "~0.29.16",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.5",
     "expo-web-browser": "~14.0.1",
     "formik": "^2.4.6",
+    "lucide-react-native": "^0.468.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-camera": "^4.2.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-keychain": "^9.2.2",
+    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-qrcode-svg": "^6.3.12",
     "react-native-reanimated": "~3.16.3",
     "react-native-safe-area-context": "4.12.0",
