--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -18,12 +18,18 @@
     "@babel/runtime": "^7.26.0",
     "@expo/vector-icons": "^14.0.4",
     "@react-native-clipboard/clipboard": "^1.15.0",
+    "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/bottom-tabs": "^7.1.3",
-    "@react-navigation/native": "^7.0.13",
+    "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.1.14",
+    "@react-navigation/stack": "^7.1.0",
+    "@shopify/react-native-skia": "^1.7.2",
     "expo": "~52.0.17",
     "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.0.1",
+    "expo-camera": "~16.0.9",
+    "expo-clipboard": "~7.0.0",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
@@ -35,29 +41,37 @@
     "expo-system-ui": "~4.0.5",
     "expo-web-browser": "~14.0.1",
     "formik": "^2.4.6",
+    "jsqr": "^1.4.0",
     "lucide-react-native": "^0.468.0",
     "nativewind": "^4.1.23",
+    "qrcode": "^1.5.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
     "react-native-camera": "^4.2.1",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-keychain": "^9.2.2",
+    "react-native-permissions": "^5.2.1",
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-qrcode-svg": "^6.3.12",
     "react-native-reanimated": "~3.16.3",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "~4.1.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-vision-camera": "^4.6.3",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "tailwindcss": "^3.4.16",
+    "vision-camera-code-scanner": "^0.2.0",
     "yup": "^1.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
+    "@react-native-community/cli": "latest",
     "@types/jest": "^29.5.14",
     "@types/react": "~18.3.14",
+    "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^18.3.1",
     "jest": "^29.7.0",
     "jest-expo": "~52.0.2",
