--- a/app.json
+++ b/app.json
@@ -3,6 +3,7 @@
     "name": "ssi",
     "slug": "ssi",
     "version": "1.0.0",
+    "permissions": ["CAMERA"],
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
