--- a/package.json
+++ b/package.json
@@ -17,27 +17,28 @@
   "dependencies": {
     "@babel/runtime": "^7.26.0",
     "@expo/vector-icons": "^14.0.4",
-    "@react-navigation/bottom-tabs": "^7.1.3",
-    "@react-navigation/native": "^7.0.13",
-    "@react-navigation/native-stack": "^7.1.14",
-    "expo": "~52.0.17",
+    "@react-navigation/bottom-tabs": "^7.0.0",
+    "@react-navigation/native": "^7.0.0",
+    "@react-navigation/native-stack": "^7.0.0",
+    "expo": "~52.0.18",
     "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.0.1",
+    "expo-camera": "~16.0.9",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.11",
-    "expo-splash-screen": "~0.29.16",
+    "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
-    "expo-system-ui": "~4.0.5",
+    "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
     "formik": "^2.4.6",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.3",
+    "react-native": "0.76.5",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-keychain": "^9.2.2",
     "react-native-qrcode-svg": "^6.3.12",
@@ -54,7 +55,9 @@
     "@babel/core": "^7.26.0",
     "@types/jest": "^29.5.14",
     "@types/react": "~18.3.14",
+    "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.3.1",
+    "babel-preset-expo": "^12.0.4",
     "jest": "^29.7.0",
     "jest-expo": "~52.0.2",
     "react-test-renderer": "18.3.1",
