--- a/package.json
+++ b/package.json
@@ -17,10 +17,7 @@
   "dependencies": {
     "@babel/runtime": "^7.26.0",
     "@expo/vector-icons": "^14.0.4",
-    "expo": "~52.0.18",
-    "expo-barcode-scanner": "^13.0.1",
-    "expo-blur": "~14.0.1",
-    "expo-camera": "~16.0.9",
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-clipboard/clipboard": "^1.15.0",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-masked-view/masked-view": "^0.3.2",
@@ -29,6 +26,10 @@
     "@react-navigation/native-stack": "^7.1.14",
     "@react-navigation/stack": "^7.1.0",
     "@shopify/react-native-skia": "^1.7.2",
+    "expo": "~52.0.18",
+    "expo-barcode-scanner": "^13.0.1",
+    "expo-blur": "~14.0.1",
+    "expo-camera": "~16.0.9",
     "expo-clipboard": "~7.0.0",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
@@ -43,7 +44,6 @@
     "formik": "^2.4.6",
     "jsqr": "^1.4.0",
     "lucide-react-native": "^0.468.0",
-    "nativewind": "^4.1.23",
     "qrcode": "^1.5.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -55,14 +55,13 @@
     "react-native-permissions": "^5.2.1",
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-qrcode-svg": "^6.3.12",
-    "react-native-reanimated": "~3.16.3",
+    "react-native-reanimated": "~3.16.5",
     "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "~4.1.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-vision-camera": "^4.6.3",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "tailwindcss": "^3.4.16",
     "vision-camera-code-scanner": "^0.2.0",
     "yup": "^1.5.0"
   },
@@ -70,12 +69,13 @@
     "@babel/core": "^7.26.0",
     "@react-native-community/cli": "latest",
     "@types/jest": "^29.5.14",
-    "@types/react": "~18.3.14",
+    "@types/react": "~18.3.16",
     "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^18.3.1",
     "babel-preset-expo": "^12.0.4",
     "jest": "^29.7.0",
-    "jest-expo": "~52.0.2",
+    "jest-expo": "~49.0.0",
+    "react-native-css-interop": "^0.1.22",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.7.2"
   },
